# kernelinit

./: LICENSE  README.md  pyproject.toml  setup.py  tricks.md
kernelinit/: files.py  main.py  runfile.py  unintended.py  utils.py
kernelinit/templates/: Makefile  kernelsymbols.c  makeroot  makeroot.asm
kernelinit/templates/exploit-src/: common.h  jitspray.h  kone_gadget.h  main.c  userfaultfd.h
